Labatt POCM Deployment to UAT 09.16.2016/objects/Area_Item_Inventory__c.object
<CustomObject>
    <description>Custom object for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Labatt_Region__c</fullName>
        <externalId>true</externalId>
        <label>Labatt Region</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Item__c</fullName>
        <label>Marketing Item</label>
        <referenceTo>Marketing_Item__c</referenceTo>
        <relationshipLabel>Area Item Inventories</relationshipLabel>
        <relationshipName>Area_Item_Inventories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated_to_Area__c</fullName>
        <label>Quantity Allocated to Area</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Remaining__c</fullName>
        <formula>Quantity_Allocated_to_Area__c - Quantity_Shopped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shopped__c</fullName>
        <label>Quantity Shopped</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Area Item Inventory</label>
    <nameField>
        <displayFormat>AII-{0000}</displayFormat>
        <label>Area Item Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Item Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_Remaining_GTorEQ_0</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity_Remaining__c &gt;= 0</errorConditionFormula>
        <errorMessage>The quantity remaining must be greater than or equal to zero.</errorMessage>
    </validationRules>
</CustomObject>